feat: permissions added. Readme updated
