# models/permission_list_all.go
@@ -1,0 +1,28 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+)
+
+// PermissionListAll permission list all
+// Example: [{"groups":[{"group_id":"group_1_id","members":["user_2_id","user_3_id"],"role":"admin"}],"resource":"Resource ID","users":[{"role":"admin","user_id":"user_1_id"}]}]
+//
+// swagger:model PermissionListAll
+type PermissionListAll []interface{}
+
+// Validate validates this permission list all
+func (m PermissionListAll) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this permission list all based on context it is used
+func (m PermissionListAll) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
