# models/role_list_all_response.go
@@ -1,0 +1,28 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+)
+
+// RoleListAllResponse role list all response
+// Example: [{"_id":"Role ID","actions":["read","write"],"description":"Role Description","name":"Role Name"}]
+//
+// swagger:model RoleListAllResponse
+type RoleListAllResponse []interface{}
+
+// Validate validates this role list all response
+func (m RoleListAllResponse) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this role list all response based on context it is used
+func (m RoleListAllResponse) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
